--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <h1>
-  {{title}}
+  Noe
 </h1>
+<nav md-tab-nav-bar>
+  <a md-tab-link
+     *ngFor="let tab of tabs"
+     [routerLink]="tab.link"
+     routerLinkActive #rla="routerLinkActive"
+     [active]="rla.isActive">
+    {{tab.label}}
+  </a>
+</nav>
+<router-outlet></router-outlet>
