--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,36 @@
-<p>
-  home works!
-</p>
+<md-grid-list cols="4" rowHeight="300px">
+  <md-grid-tile>
+    Progression
+  </md-grid-tile>
+
+  <md-grid-tile
+    [colspan]="2"
+    [rowspan]="2">
+    Newsletter
+  </md-grid-tile>
+
+  <md-grid-tile>
+    Calendrier des sorties
+  </md-grid-tile>
+
+  <md-grid-tile
+    [colspan]="1"
+    [rowspan]="2">
+    <iframe src="https://discordapp.com/widget?id=288046933480570881&theme=dark" width="100%" height="100%"
+            allowtransparency="true" frameborder="0"></iframe>
+  </md-grid-tile>
+
+  <md-grid-tile>
+    Liens utiles
+  </md-grid-tile>
+
+  <md-grid-tile
+    [colspan]="2"
+    [rowspan]="1">
+    Sujets récents
+  </md-grid-tile>
+
+  <md-grid-tile>
+    Galerie
+  </md-grid-tile>
+</md-grid-list>
