--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 body {
-  width: 100%;
-  padding: 0;
-  margin: 0;
+    width: 100%;
+    margin: 0;
+    background-image: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg");
+    background-size: cover;
 }
