feat: added basic progression component.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <md-grid-list cols="4" rowHeight="300px">
   <md-grid-tile>
-    Progression
+    <app-progression></app-progression>
   </md-grid-tile>
 
   <md-grid-tile
