--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,5 @@ body {
     margin: 0;
     background-image: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg");
     background-size: cover;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
