style: updated progression to add a card-based design.

--- a/src/app/progression/progression.component.html
+++ b/src/app/progression/progression.component.html
@@ -1,1 +1,11 @@
-<app-status name="Alexander" [max]="12" [value]="9"></app-status>
+<md-card>
+    <md-card-header>
+        <md-card-title><h3>Progression</h3></md-card-title>
+    </md-card-header>
+    <md-card-content>
+        <app-status name="Alexander" [max]="12" [value]="9"></app-status>
+        <app-status name="Bahamut" [max]="13" [value]="13"></app-status>
+        <app-status name="Primos 60" [max]="12" [value]="12"></app-status>
+        <app-status name="Primos 50" [max]="12" [value]="12"></app-status>
+    </md-card-content>
+</md-card>
