--- a/src/app/progression/status/status.component.html
+++ b/src/app/progression/status/status.component.html
@@ -6,8 +6,7 @@
                 class="bar"
                 color="primary"
                 mode="determinate"
-                [value]="value"
-                [bufferValue]="max">
+                [value]="value/max * 100">
         </md-progress-bar>
     </md-grid-tile>
 </md-grid-list>
