refactor: changed the whole structure of the project, with a new template base.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,12 @@
 :host {
-    text-align: center;
+  text-align: center;
 }
 
-.content{
-    width: 1200px;
-    margin: 0 auto;
+.content {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+nav {
+  background-color: white;
 }
