--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,8 @@
-<md-grid-list cols="4" rowHeight="300px">
-  <md-grid-tile>
-    <app-progression></app-progression>
-  </md-grid-tile>
-
-  <md-grid-tile
-    [colspan]="2"
-    [rowspan]="2">
-    Newsletter
-  </md-grid-tile>
-
-  <md-grid-tile>
-    Calendrier des sorties
-  </md-grid-tile>
-
-  <md-grid-tile
-    [colspan]="1"
-    [rowspan]="2">
-    <iframe src="https://discordapp.com/widget?id=288046933480570881&theme=dark" width="100%" height="100%"
-            allowtransparency="true" frameborder="0"></iframe>
-  </md-grid-tile>
-
-  <md-grid-tile>
-    Liens utiles
-  </md-grid-tile>
-
-  <md-grid-tile
-    [colspan]="2"
-    [rowspan]="1">
-    Sujets récents
-  </md-grid-tile>
-
-  <md-grid-tile>
-    Galerie
-  </md-grid-tile>
+<md-grid-list cols="1" rowHeight="180px">
+    <md-grid-tile [rowspan]="3">
+        Photo de groupe
+    </md-grid-tile>
+    <md-grid-tile [rowspan]="2">
+        Présentation rapide blablabla
+    </md-grid-tile>
 </md-grid-list>
