--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,15 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 body {
-    width: 100%;
-    margin: 0;
-    background-image: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg");
-    background-size: cover;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg") no-repeat center center fixed;
+  background-size: cover;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+md-grid-tile {
+  background-color: lightgreen;
+  border: dashed 1px grey;
 }
