feat: Added basic member list.
Waiting for the api to implement it like it has to be.

--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -3,7 +3,7 @@
         Qui sommes-nous?
     </md-grid-tile>
     <md-grid-tile [rowspan]="3">
-        Liste des gms etc
+        <app-members></app-members>
     </md-grid-tile>
     <md-grid-tile [colspan]="3" [rowspan]="2">
         Avancement de la CL
