feat(discord-widget): First version of the discord widget.

--- a/src/app/discord-widget/discord-widget.component.html
+++ b/src/app/discord-widget/discord-widget.component.html
@@ -1,3 +1,25 @@
-<p>
-  discord-widget works!
-</p>
+<md-card>
+    <md-card-header>Discord {{(guild | async)?.name}}</md-card-header>
+    <md-card-content>
+        <md-list>
+            <h3 md-subheader>Channels</h3>
+            <md-list-item *ngFor="let channel of (guild | async)?.channels">
+                <h3 md-line>{{channel.name}}</h3>
+                <div md-line *ngFor="let member of channel.members">
+                    <img md-list-avatar class="mini-avatar" [src]="member.avatar_url" alt="{{member.username}}">
+                    <span class="mini-member-name">{{member.nick === undefined?member.username:member.nick}}</span>
+                </div>
+            </md-list-item>
+        </md-list>
+        <md-list dense>
+            <h3 md-subheader>Membres</h3>
+            <md-list-item *ngFor="let member of (guild | async)?.members">
+                <img md-list-avatar class="avatar" [src]="member.avatar_url" alt="{{member.username}}">
+                <span md-line>{{member.nick === undefined?member.username:member.nick}}</span>
+            </md-list-item>
+        </md-list>
+    </md-card-content>
+    <md-card-actions>
+        <a target="_blank" [href]="(guild | async)?.instant_invite" md-button>Nous rejoindre !</a>
+    </md-card-actions>
+</md-card>
