--- a/src/app/join-us/join-us.component.html
+++ b/src/app/join-us/join-us.component.html
@@ -1,7 +1,6 @@
 <md-grid-list cols="4" rowHeight="180px">
     <md-grid-tile [rowspan]="5">
-        <iframe src="https://discordapp.com/widget?id=288046933480570881&theme=dark" width="100%" height="100%"
-                allowtransparency="true" frameborder="0"></iframe>
+        <app-discord-widget serverid="288046933480570881"></app-discord-widget>
     </md-grid-tile>
     <md-grid-tile [colspan]="3" [rowspan]="5">
         Comment postuler?
