--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'theme';
 
 body {
   width: 100%;
@@ -8,9 +7,4 @@ body {
   background: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-md-grid-tile {
-  background-color: whitesmoke;
-  border: dashed 1px grey;
 }
