--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,20 @@
+@import '../theme';
+
+@include angular-material-theme($app-theme);
+
 :host {
   text-align: center;
+  .container {
+    width: 1200px;
+    margin: 0 auto;
+    .header {
+
+    }
+    .content {
+      background: map-get(map-get($app-theme, background), background);
+    }
+  }
+
 }
 
-.content {
-  width: 1200px;
-  margin: 0 auto;
-}
 
-nav {
-  background-color: white;
-}
