--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,5 @@ body {
   background: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding-bottom: 50px;
 }
