--- a/src/app/discord-widget/discord-widget.component.scss
+++ b/src/app/discord-widget/discord-widget.component.scss
@@ -1,7 +1,7 @@
 :host {
-  width: 100%;
-  height: 100%;
   text-align: left;
+  width: 100%;
+  padding: 10px;
   .avatar {
     width: 32px !important;
     height: 32px !important;
@@ -16,5 +16,11 @@
     font-size: 13px;
     line-height: 16px;
     padding: 0 2px;
+  }
+  .in-channel-member {
+    margin-left: 20px !important;
+  }
+  md-card-actions {
+    text-align: center;
   }
 }
