--- a/src/app/presentation/progression/status/status.component.html
+++ b/src/app/presentation/progression/status/status.component.html
@@ -6,7 +6,7 @@
                 class="bar"
                 color="primary"
                 mode="determinate"
-                [value]="value/max * 100">
+                [value]="(value/max) * 100">
         </md-progress-bar>
     </md-grid-tile>
 </md-grid-list>
