style: added FC picture in home page.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<md-grid-list cols="1" rowHeight="180px">
+<md-grid-list cols="1" rowHeight="224.5px">
     <md-grid-tile [rowspan]="3">
-        Photo de groupe
+        <img src="../../assets/party-photo.png" alt="">
     </md-grid-tile>
     <md-grid-tile [rowspan]="2">
         Présentation rapide blablabla
