style: added alt for party picture.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <md-grid-list cols="1" rowHeight="224.5px">
     <md-grid-tile [rowspan]="3">
-        <img src="../../assets/party-photo.png" alt="">
+        <img src="../../assets/party-photo.png" alt="Photo de groupe !">
     </md-grid-tile>
     <md-grid-tile [rowspan]="2">
         Présentation rapide blablabla
