feat(news): added links to usefull websites.

--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -5,6 +5,9 @@
   .items {
     height: 300px;
     overflow-y: scroll;
+    a{
+      text-decoration: none;
+    }
   }
   .description {
     white-space: normal !important;
