feat(home): added basic FC description.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,19 @@
     <md-grid-tile [rowspan]="3">
         <img src="../../assets/party-photo.png" alt="Photo de groupe !">
     </md-grid-tile>
-    <md-grid-tile [rowspan]="2">
-        Présentation rapide blablabla
+    <md-grid-tile>
+        <div class="description">
+            Noe, c'est des potes, du fun, du gras, du fun et du fun !
+            <br>
+            Nous sommes là pour nous amuser, déconner, et avancer dans le contenu de FFXIV.
+            <br>
+            <br>
+            <br>
+            <span class="quote">
+            C'est dans les vieilles CL qu'on fait les meilleurs raids
+            <br>
+            - Nanamo
+        </span>
+        </div>
     </md-grid-tile>
 </md-grid-list>
