--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,13 @@
-img {
-  max-width: 100%;
-  max-height: 100%;
+:host {
+  text-align: left;
+  .description {
+    flex-direction: column;
+  }
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .quote {
+    font-style: italic;
+  }
 }
