--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,9 +12,17 @@
     }
     .content {
       background: map-get(map-get($app-theme, background), background);
+      .menu {
+        position: absolute;
+        right: 5px;
+        top: 1px;
+      }
+      md-icon {
+        font-size: 20px;
+        margin-top: 4px;
+      }
     }
   }
-
 }
 
 
