misc: wrong name for login form.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<h3>Inscription</h3>
+<h3>Login</h3>
 <pre>En cours de dev, non fonctionnel (c'est en prod pour démo)</pre>
 <form>
     <md-input-container>
@@ -10,5 +10,5 @@
     <md-input-container>
         <input required mdInput placeholder="LodestoneId">
     </md-input-container>
-    <button md-raised-button type="submit">S'inscrire</button>
+    <button md-raised-button type="submit">Valider</button>
 </form>
