feat: changed menu logic for a sidenav menu.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,14 @@
       }
     }
   }
+  md-sidenav {
+    width: 300px;
+  }
+  md-sidenav-container{
+    background: url("http://img.finalfantasyxiv.com/lds/h/R/a6Bm49It6jMLQvywkHgCNtbAa4.jpg") no-repeat center center fixed;
+    background-size: cover;
+    padding-bottom: 50px;
+  }
 }
 
 
