misc: Added login form directly into eht sidebar, as it should not require a click to open a modal to login.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
 <h3>Login</h3>
-<pre>En cours de dev, non fonctionnel (c'est en prod pour démo)</pre>
 <form>
     <md-input-container>
         <input mdInput required placeholder="Identifiant">
@@ -7,8 +6,6 @@
     <md-input-container>
         <input mdInput required type="password" placeholder="Mot de passe">
     </md-input-container>
-    <md-input-container>
-        <input required mdInput placeholder="LodestoneId">
-    </md-input-container>
-    <button md-raised-button type="submit">Valider</button>
+    <button md-raised-button type="submit" color="primary">S'identifier</button>
+    <button md-button color="accent">S'enregistrer</button>
 </form>
