--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <button md-raised-button (click)="login()" color="primary">Login</button>
+    <app-login></app-login>
 </div>
