style: multiple fixes + new theme added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <app-sidebar></app-sidebar>
     </md-sidenav>
 
-    <div class="container">
+    <div class="login-container">
         <h1 class="header">
             Noe
         </h1>
