--- a/src/app/join-us/join-us.component.html
+++ b/src/app/join-us/join-us.component.html
@@ -1,8 +1,8 @@
-<md-grid-list cols="5">
-    <md-grid-tile [colspan]="2" [rowspan]="4">
+<div class="container">
+    <div class="widget">
         <app-discord-widget serverid="288046933480570881"></app-discord-widget>
-    </md-grid-tile>
-    <md-grid-tile [colspan]="3" [rowspan]="4">
+    </div>
+    <div class="how">
         Comment postuler?
-    </md-grid-tile>
-</md-grid-list>
+    </div>
+</div>
