--- a/src/theme.scss
+++ b/src/theme.scss
@@ -6,17 +6,73 @@
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
+$noe-primary: (
+        50: #ffebee,
+        100: #c2473e,
+        200: #ef9a9a,
+        300: #e57373,
+        500: #8c1117,
+        600: #e53935,
+        700: #590000,
+        800: #c62828,
+        900: #b71c1c,
+        contrast: (
+                50: $black-87-opacity,
+                100: $black-87-opacity,
+                200: $black-87-opacity,
+                300: $black-87-opacity,
+                400: $black-87-opacity,
+                500: white,
+                600: white,
+                700: white,
+                800: $white-87-opacity,
+                900: $white-87-opacity,
+                A100: $black-87-opacity,
+                A200: white,
+                A400: white,
+                A700: white,
+        )
+);
+
+$noe-accent : (
+        100: #dca864,
+        200: #dca864,
+        300: #dca864,
+        400: #a87937,
+        500: #a87937,
+        600: #a87937,
+        700: #764d09,
+        800: #764d09,
+        900: #764d09,
+        contrast: (
+                50: $black-87-opacity,
+                100: $black-87-opacity,
+                200: $black-87-opacity,
+                300: $black-87-opacity,
+                400: $black-87-opacity,
+                500: white,
+                600: white,
+                700: white,
+                800: $white-87-opacity,
+                900: $white-87-opacity,
+                A100: $black-87-opacity,
+                A200: white,
+                A400: white,
+                A700: white,
+        )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$app-primary: mat-palette($mat-blue);
-$app-accent: mat-palette($mat-blue-grey);
+$app-primary: mat-palette($noe-primary);
+$app-accent: mat-palette($noe-accent);
 
 // The warn palette is optional (defaults to red).
 $app-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+$app-theme: mat-dark-theme($app-primary, $app-accent, $app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
