--- a/src/app/discord-widget/discord-widget.component.scss
+++ b/src/app/discord-widget/discord-widget.component.scss
@@ -1,34 +1,34 @@
 :host {
   text-align: left;
-  width: 100%;
-  padding: 10px;
-  max-height: 100%;
-  overflow-y: scroll;
-  .avatar {
-    width: 32px !important;
-    height: 32px !important;
-  }
-  .mini-avatar {
-    width: 16px !important;
-    height: 16px !important;
-    vertical-align: middle;
-  }
-  .mini-member-name {
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 16px;
-    padding: 0 2px;
-  }
-  .icon {
-    font-size: 13px;
-    height: auto;
-    width: auto;
-    vertical-align: middle;
-  }
-  .in-channel-member {
-    margin-left: 20px !important;
-  }
-  md-card-actions {
-    text-align: center;
+  width: 350px;
+  .mat-card {
+    width: 350px;
+    .avatar {
+      width: 32px !important;
+      height: 32px !important;
+    }
+    .mini-avatar {
+      width: 16px !important;
+      height: 16px !important;
+      vertical-align: middle;
+    }
+    .mini-member-name {
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 16px;
+      padding: 0 2px;
+    }
+    .icon {
+      font-size: 13px;
+      height: auto;
+      width: auto;
+      vertical-align: middle;
+    }
+    .in-channel-member {
+      margin-left: 20px !important;
+    }
+    md-card-actions {
+      text-align: center;
+    }
   }
 }
