--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
 @import 'theme';
 
-body {
+html, body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+}
+
+body {
+  background: url("http://img.finalfantasyxiv.com/lds/h/F/0Fq12VYs-MUdPB6svSZ-dom2g0.jpg") no-repeat center top fixed;
+  background-size: cover;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
