--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,9 @@
     }
     .content {
       background: map-get(map-get($app-theme, background), background);
+      nav {
+        background: mat-color($app-primary, 100);
+      }
       .menu {
         position: absolute;
         right: 5px;
