style: updated some colors and a bit of shadows.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,13 +7,11 @@
   .login-container {
     width: 1200px;
     margin: 0 auto;
-    .header {
-
-    }
     .content {
       background: map-get(map-get($app-theme, background), background);
+      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
       nav {
-        background: mat-color($app-primary, 100);
+        background: mat-color($app-primary, 500);
       }
       .menu {
         position: absolute;
