--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ body {
   background-size: cover;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding-bottom: 100px;
 }
 
 //No idea why but I have to set this style here in order to get it working...
