--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
     .content {
       background: map-get(map-get($app-theme, background), background);
-      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
       nav {
         background: mat-color($app-primary, 500);
       }
@@ -32,6 +32,7 @@
     background-color: unset;
     height: 100%;
     width: 100%;
+    padding-bottom: 80px;
   }
 }
 
