--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,16 @@
-<div class="login-container">
+<div *ngIf="login" class="login-container">
     <app-login></app-login>
+</div>
+<div class="profile-wrapper">
+    <div class="profile-container">
+        <img src="{{profile?.data.portrait}}" alt="avatar">
+        <h3>{{profile?.name}}</h3>
+        <i>{{profile?.data.title}}</i>
+        <md-grid-list cols="10" rowHeight="35px" gutterSize="5px">
+            <md-grid-tile *ngFor="let job of classes">
+                <app-job-icon [icon]="job.data.icon" [level]="job.level" mdTooltip="job.data.abbr"
+                              mdTooltipPosition="above"></app-job-icon>
+            </md-grid-tile>
+        </md-grid-list>
+    </div>
 </div>
