--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,11 +6,38 @@
         <img src="{{profile?.data.portrait}}" alt="avatar">
         <h3>{{profile?.name}}</h3>
         <i>{{profile?.data.title}}</i>
-        <md-grid-list cols="10" rowHeight="35px" gutterSize="5px">
-            <md-grid-tile *ngFor="let job of classes">
-                <app-job-icon [icon]="job.data.icon" [level]="job.level" [mdTooltip]="job.data.abbr"
-                              mdTooltipPosition="above"></app-job-icon>
-            </md-grid-tile>
-        </md-grid-list>
+        <div class="jobs">
+            <span class="jobCategory">Disciples de la guerre</span>
+            <md-grid-list cols="7" rowHeight="35px" gutterSize="5px">
+                <div *ngFor="let i = index;let job of getDoW()">
+                    <md-grid-tile *ngIf="i === 7"></md-grid-tile>
+                    <md-grid-tile>
+                        <app-job-icon [icon]="job.data.icon" [level]="job.level" [mdTooltip]="job.data.abbr"
+                                      mdTooltipPosition="above"></app-job-icon>
+                    </md-grid-tile>
+                </div>
+            </md-grid-list>
+        </div>
+        <div class="jobs">
+            <span class="jobCategory">Disciples de la main</span>
+            <md-grid-list cols="8" rowHeight="35px" gutterSize="5px">
+                <div *ngFor="let i = index; let job of getDoH()">
+                    <md-grid-tile>
+                        <app-job-icon [icon]="job.data.icon" [level]="job.level" [mdTooltip]="job.data.abbr"
+                                      mdTooltipPosition="above"></app-job-icon>
+                    </md-grid-tile>
+                </div>
+            </md-grid-list>
+        </div>
+        <div class="jobs">
+            <span class="jobCategory">Disciples de la terre</span>
+            <md-grid-list cols="7" rowHeight="35px" gutterSize="5px">
+                <md-grid-tile colspan="2"></md-grid-tile>
+                <md-grid-tile *ngFor="let job of getDoL()">
+                    <app-job-icon [icon]="job.data.icon" [level]="job.level" [mdTooltip]="job.data.abbr"
+                                  mdTooltipPosition="above"></app-job-icon>
+                </md-grid-tile>
+            </md-grid-list>
+        </div>
     </div>
 </div>
