--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="login" class="login-container">
-    <app-login></app-login>
+    <app-login (loggedIn)="identified()"></app-login>
 </div>
-<div class="profile-wrapper">
+<div *ngIf="!login" class="profile-wrapper">
     <div class="profile-container">
         <img src="{{profile?.data.portrait}}" alt="avatar">
         <h3>{{profile?.name}}</h3>
