--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,20 @@
-<h3>Login</h3>
-<form>
-    <md-input-container>
-        <input mdInput required [(ngModel)]="login" name="login" placeholder="Identifiant">
-    </md-input-container>
-    <md-input-container>
-        <input mdInput required [(ngModel)]="password" name="password" type="password" placeholder="Mot de passe">
-    </md-input-container>
-    <md-input-container>
-        <input mdInput required [(ngModel)]="password_check" name="password_check" type="password"
-               placeholder="Vérification du mot de passe">
-    </md-input-container>
-    <button md-raised-button type="submit" color="primary" (click)="register()">S'inscrire</button>
-</form>
+<div class="container">
+    <h3>Inscription</h3>
+    <form (submit)="register()">
+        <md-input-container>
+            <input mdInput required [(ngModel)]="login" name="login" placeholder="Identifiant">
+        </md-input-container>
+        <md-input-container>
+            <input mdInput required [(ngModel)]="password" name="password" type="password" placeholder="Mot de passe">
+        </md-input-container>
+        <md-input-container>
+            <input mdInput required [(ngModel)]="password_check" pattern="password" name="password_check" type="password"
+                   placeholder="Vérification du mot de passe">
+        </md-input-container>
+        <md-input-container>
+            <input mdInput required [(ngModel)]="lodestoneId" name="lodestone_id" type="number"
+                   placeholder="123456789">
+        </md-input-container>
+        <button md-raised-button type="submit" color="primary" >S'inscrire</button>
+    </form>
+</div>
