--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="login" class="login-container">
+<div *ngIf="login" class="container">
     <app-login (loggedIn)="identified()"></app-login>
 </div>
-<div *ngIf="!login" class="profile-wrapper">
+<div *ngIf="!login && profile !== null && profile !== undefined" class="profile-wrapper">
     <div class="profile-container">
         <img src="{{profile?.data.portrait}}" alt="avatar">
         <h3>{{profile?.name}}</h3>
@@ -39,5 +39,10 @@
                 </md-grid-tile>
             </md-grid-list>
         </div>
+        <button md-button color="accent" (click)="disconnect()">Se déconnecter</button>
     </div>
+</div>
+<div class="container" *ngIf="(profile === null || profile === undefined) && !login">
+    <md-spinner color="primary">
+    </md-spinner>
 </div>
