feat: added API-connected members list.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <md-sidenav-container>
-    <md-sidenav #sidenav opened="true">
+    <md-sidenav #sidenav>
         <app-sidebar></app-sidebar>
     </md-sidenav>
 
