--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -17,6 +17,11 @@
     align-items: center;
     height: 100%;
     .profile-container {
+      a , a:active{
+        img, img:active {
+          border: none;
+        }
+      }
       padding: 15px;
       margin: auto;
       .jobs {
