--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,7 +13,7 @@
         </md-input-container>
         <md-input-container>
             <input mdInput required [(ngModel)]="lodestoneId" name="lodestone_id" type="number"
-                   placeholder="123456789">
+                   placeholder="lodestoneId">
         </md-input-container>
         <button md-raised-button type="submit" color="primary" >S'inscrire</button>
     </form>
