--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,14 +1,12 @@
 .container {
   text-align: center;
-  form {
-    padding: 20px;
-    md-input-container {
-      display: block;
-      margin: 20px 0;
-    }
-    button {
-      margin: 5px auto;
-      display: block;
-    }
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  md-input-container {
+    margin: 5px 0;
+  }
+  button {
+    margin-top: 20px;
   }
 }
