--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,6 +1,8 @@
-<md-grid-list cols="3" rowHeight="200px">
-    <md-grid-tile [colspan]="3" [rowspan]="3">
-        Newsletter du mois
+<md-grid-list cols="3" gutterSize="10px" rowHeight="188px">
+    <md-grid-tile [colspan]="3" [rowspan]="9">
+        <img class="news"
+             src="https://cdn.discordapp.com/attachments/304230643720650752/312750006857760768/NNmai2017F.png"
+             alt="Newsletter du mois">
     </md-grid-tile>
     <md-grid-tile [rowspan]="2" [colspan]="3" class="monthly-video">
         <md-card>
