--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -1,8 +1,8 @@
 :host {
-  .description {
-    white-space: normal !important;
+  .news {
+    max-width: 100%;
   }
-  md-grid-list{
+  md-grid-list {
     padding-bottom: 30px;
   }
 }
