feat: added join-us description.

--- a/src/app/join-us/join-us.component.html
+++ b/src/app/join-us/join-us.component.html
@@ -3,6 +3,51 @@
         <app-discord-widget serverid="288046933480570881"></app-discord-widget>
     </div>
     <div class="how">
-        Comment postuler?
+        <i>“Une fois arrivé(e) à bord sur l’arche de NOE, vous ne pourrez plus vous échapper !”</i> c’est ce qu’avaient
+        dit
+        tous les précédents candidats, avant de faire partie intégrante de la compagnie libre. Ce jour là est peut être
+        le vôtre !
+
+        Comme vous l’auriez compris, nous fonctionnons de manière simple, pas de forum, pas de gros pâté à écrire, la
+        candidature de NOE se fait directement sur entretien en prenant contact sur le jeu directement en MP ou sur le
+        canal Discord avec Miu Asakura.
+
+        Pour cela, il faudrait déjà disposer de certains critères de base avant d’envisager de faire appel à lui. Les
+        voici :
+        <ul>
+            <li>Originaire du serveur Cerberus ou désireux de s’y placer définitivement si l’on vient d’un autre serveur
+                européen/américain/japonais.
+            </li>
+            <li>Savoir parler et comprendre au minimum la langue française pour communiquer et être compris des
+                autres.
+            </li>
+            <li>Avoir une certaine maturité pour ne pas être amené à prendre à coeur les choses, à avoir des prises de
+                tête ou des gestions difficiles de litiges quand ça se présente.
+            </li>
+            <li>Être principalement un joueur de FF XIV, malgré le fait qu’on ait la possibilité d’organiser d’autres
+                parties de jeu hors FF (les jeux de MOBA par exemple).
+            </li>
+            <li>Nous n’acceptons pas les mineurs sauf en cas d’exception (notamment qu’il fasse partie d’une
+                connaissance ou de la famille d’un de nos membres actuels).
+            </li>
+            <li>Enfin, on est là pour s’amuser et se faire des ami(e)s, donc d’une certaine manière tolérer le fait que
+                dans notre CL tout le monde ne soit pas au même niveau ou n'ait pas les mêmes objectifs de base dans le
+                jeu, mais serait éventuellement d’accord pour tenter l’expérience avec les autres afin d’évoluer
+                ensemble dans le jeu.
+            </li>
+        </ul>
+        Le reste se fera bien sûr avec le temps et le feeling, et chez nous, on garde toujours l’esprit “bon pote &
+        rigolade” pour préserver des bons moments. Donc ne soyez pas timide dans votre coin et osez vous intégrer
+        directement à nous pour que l’on puisse faire de notre compagnie libre un havre de joie, d’amitié, de paix et
+        surtout de gamitude.
+
+        La réponse de l’entretien et de votre candidature se fera dans les minutes qui suivront la discussion avec Miu.
+        Une période d’essai sera appliqué dans le cas où vous ne sembleriez pas être sûr de vous sentir en confort, et
+        que vous souhaitez voir en quelques jours comment ça peut rendre de siéger en notre compagnie. Mais je vous
+        garantis que jusqu’à présent, c’est un sans faute avec tous les membres actuels.
+
+        Si la compagnie libre vous intéresse toujours, tentez votre chance alors !
+        Le recrutement est OUVERT !!
+
     </div>
 </div>
