misc: fixed server name.

--- a/src/app/join-us/join-us.component.html
+++ b/src/app/join-us/join-us.component.html
@@ -15,7 +15,7 @@
         Pour cela, il faudrait déjà disposer de certains critères de base avant d’envisager de faire appel à lui. Les
         voici :
         <ul>
-            <li>Originaire du serveur Cerberus ou désireux de s’y placer définitivement si l’on vient d’un autre serveur
+            <li>Originaire du serveur Louisoix ou désireux de s’y placer définitivement si l’on vient d’un autre serveur
                 européen/américain/japonais.
             </li>
             <li>Savoir parler et comprendre au minimum la langue française pour communiquer et être compris des
